# vox_reducer_android

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/android/voxreducer_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio_main.cpp  native-lib.cpp
app/src/main/java/com/example/android/voxreducer_android/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/android/voxreducer_android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
